# homework_introduction_to_django

./: pyproject.toml
config/catalog/: urls.py  views.py
config/catalog/templates/catalog/: contacts.html
config/config/: settings.py
